# src/main/kotlin/com/wutsi/ecommerce/catalog/dto/Product.kt
@@ -27,5 +27,6 @@ data class Product(
     val numericFileUrl: String? = null,
     val sections: List<SectionSummary> = emptyList(),
     val status: String = "",
-    @get:DateTimeFormat(pattern = "yyyy-MM-dd'T'HH:mm:ssZ") val published: OffsetDateTime? = null
+    @get:DateTimeFormat(pattern = "yyyy-MM-dd'T'HH:mm:ssZ") val published: OffsetDateTime? = null,
+    val overallMetrics: Metrics = Metrics()
 )
